<resources>
  <string name="app_name" translatable="false">Salon</string>
  <string name="salon_name">ШАНТИ</string>
  <string name="salon_type">Медико-косметологический центр</string>
  <string name="share_subject">Рекомендую посетить мой любимый салон Шанти</string>
  <string name="share_text">Скачивай мобильное приложение салона "Шанти" и получай бонусы прямо сейчас: https://play.google.com/store/apps/details?id=com.apps.twelve.floor.salon </string>
  <string name="dialog_action_ok" translatable="false">OK</string>
  <string name="dialog_error_title">Ошибка</string>
  <string name="title_activity_start">Салон</string>
  <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
  <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="menu_main">Главная</string>
  <string name="menu_booking">Записаться</string>
  <string name="menu_my_booking">Мои записи</string>
  <string name="menu_my_bonus">Мои бонусы</string>
  <string name="menu_share">Поделиться с друзьями</string>
  <string name="menu_our_work">Наши работы</string>
  <string name="menu_favourite">Избранное</string>
  <string name="menu_news">Новости</string>
  <string name="menu_contacts">Контакты</string>
  <string name="menu_settings">Настройки приложения</string>
  <string name="list_is_empty">Список пуст</string>
  <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed justo augue. Aenean eros lacus, scelerisque in nisi eget, auctor elementum erat. Suspendisse at mi mauris. In finibus vel urna sed scelerisque. Donec ut tortor rutrum, ullamcorper nunc tristique, placerat arcu. Praesent vitae diam enim. Mauris mi nunc, lacinia quis enim eu, varius auctor lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed egestas bibendum eros vel pulvinar. Sed tempor dui at posuere varius. Ut efficitur mauris vel tincidunt eleifend. Maecenas gravida nec metus et lobortis.</string>
  <string name="news">Новости</string>
  <string name="catalog">Каталог</string>
  <string name="registration">Вход / Регистрация</string>
  <string name="bonus_registration_text">Зарегистрируйтесь и получите бонусы!</string>
  <string name="bonus_card">Бонусная карта</string>
  <string name="all_news">ВСЕ НОВОСТИ</string>
  <string name="all_books">Все записи</string>
  <string name="bonus">Бонусы</string>
  <string name="postpone">Перенести</string>
  <string name="cancel">Отменить</string>
  <string name="time_is_up">Время истекло!</string>
  <string name="cancel_booking">Отмена записи</string>
  <string name="confirm_cancel_booking">Подтвердите удаление записи.</string>
  <string name="confirm">Подтвердить</string>
  <string name="booking_days_left" translatable="false">%1$d дн.</string>
  <string name="yes">Да</string>
  <string name="no">Нет</string>
  <string name="your_last_booking">Ваша последняя запись</string>
  <string name="user_data">%1$s \n(%2$s)</string>
  <string name="contacts_salon_name">Beauty Salon \"Шанти\"</string>
  <string name="contacts_phone_text">Контактный телефон</string>
  <string name="contacts_phone1" translatable="false">050 109 75 79</string>
  <string name="contacts_phone2" translatable="false">073 046 52 00</string>
  <string name="contacts_phone3" translatable="false">097 024 28 50</string>
  <string name="contacts_address">г. Киев\nул. Л. Руденко 6</string>
  <string name="contacts_map" translatable="false"><u>Карта</u></string>
  <string name="contacts_feedback">Отправляйте свои пожелания\nи коментарии на email:</string>
  <string name="contacts_email" translatable="false">example@gmail.com</string>
  <string name="contacts_schedule">График работы:\nЕждневно с\n9:00 до 22:00</string>
  <string name="contacts_about">О нас</string>
  <string name="contacts_website" translatable="false"><u>Перейти на веб-сайт</u></string>
  <string name="more">Еще</string>
  <string name="detail">Подробней</string>
  <string name="contacts_about_text">      Добро пожаловать в Медико-косметологический центр ШАНТИ удобно расположившийся на улице Л.Руденко,6  всего в пяти минутах  от станции метро «Позняки».\n      У нас работают специалисты индустрии красоты  с более чем 10 летним стажем.
Приятный интерьер, внимательный и дружелюбный персонал МКЦ ШАНТИ, высококлассные специалисты с удовольствием позаботятся о вашей красоте!  ШАНТИ является центром дерматологии и врачебной косметологии.  Консультация врача-дерматолога, диагностика и удаление новообразований, избавление от морщин, лазерная эпиляция, массаж или чистка лица, инъекции, аппаратная косметология, гидроколонотерапия, СПА-процедуры с использованием Альфа-капсулы и многие другие процедуры к вашим услугам на высочайшем уровне.\n
У нас вы можете воспользоваться услугами самых креативных парикмахеров-стилистов и мастеров ногтевого сервиса.</string>
  <string name="book_create">Записаться</string>
  <string name="book_choose_service">Начать выбор услуги</string>
  <string name="book_choose_specialist">Начать выбор специалиста</string>
  <string name="next_step">Вперед</string>
  <string name="prev_step">Назад</string>
  <string name="empty_name_error">Введите имя</string>
  <string name="empty_phone_error">Введите корректно телефон</string>
  <string name="empty_complaint_error">Опишите подробней вашу проблему</string>
  <string name="your_bonus">Ваши бонусы:</string>
  <string name="history">История</string>
  <string name="bonus_how_works">Как работают бонусы</string>
  <string name="promo_your">Ваш промо-код</string>
  <string name="promo_your_descr">(ваш уникальный код, который может ввести приглашенный друг)</string>
  <string name="promo_friend">Промо-код друга</string>
  <string name="promo_friend_descr">(введите промо-код, который хотите использовать)</string>
  <string name="promo_send">Отправить другу</string>
  <string name="promo_fill">ввести промо-код друга</string>
  <string name="history_title">Накопленные бонусы</string>
  <string name="history_description">(расплачивайтесь бонусами за услуги)</string>
  <string name="history_no_items">Список транзакций пуст</string>
  <string name="bonus_measure">%s бонусов</string>
  <string name="bonus_description">Заказ услуг и товаров в новом мобильном приложении стали еще выгоднее! Получите приветственные 10 бонусов прямо сейчас! \n
    \nДля этого Вам нужно пройти регистрацию и стать участником программы лояльности.
    Также, став участником программы, за каждую услугу или покупку товара Вы получаете бонусы (5% от стоимости услуги или товара).
    \n\nЧем больше Вы покупаете услуг и товаров, тем больше бонусов Вы получаете!
    Накопленными бонусами Вы можете рассчитываться за выбранные услуги, товары, когда Вам удобно, получать сюрпризы и подарки от салона в свой день рождения. </string>
  <string name="bonus_description_2">* При оплате один бонус эквивалентен одной гривне. Минимальное количество бонусов, принимаемых к оплате - 1. Количество бонусов при расчетах кратно 1-му.</string>
  <string name="tab_services">Выбор\nуслуги</string>
  <string name="tab_time">Выбор\nвремени</string>
  <string name="tab_master">Выбор\nмастера</string>
  <string name="tab_data">Контактные\nданные</string>
  <string name="booking_service">Услуга:</string>
  <string name="booking_time">Время:</string>
  <string name="booking_master">Мастер:</string>
  <string name="booking_name">Ваше имя</string>
  <string name="booking_name_description">(как к Вам обращаться)</string>
  <string name="booking_phone">Номер мобильного телефона</string>
  <string name="booking_phone_description" translatable="false">(формат +380501234455)</string>
  <string name="booking_button">ЗАПИСАТЬСЯ</string>
  <string name="name">Имя</string>
  <string name="phone">Телефон</string>
  <string name="choose_master">Выбор Специалиста</string>
  <string name="any_master">Любой Специалист</string>
  <string name="service">Услуга:</string>
  <string name="spare_time">Свободное время на</string>
  <string name="time_empty">Сведения о свободном времени отсутствуют</string>
  <string name="booking_date_and_time" translatable="false">%1$s в %2$s</string>
  <string name="time_empty_descr">Вы можете записаться, позвонив по телефону:</string>
  <string name="search_service">Поиск услуги</string>
  <string name="title_write_error">Проверьте данные</string>
  <string name="error_empty_service">Услуга не выбрана</string>
  <string name="error_empty_master">Мастер не выбран</string>
  <string name="error_empty_date">Время не выбрано</string>
  <string name="error_time_not_available">Выбранное время уже занято!</string>
  <string name="error_booking_entity_not_exist">Текущей записи не существует</string>
  <string name="error_data_not_correct">Введенные данные не корректны.</string>
  <string name="done">Готово</string>
  <string name="booking_not_finished">Запись не закончена</string>
  <string name="booking_break">Вы точно хотите ее прервать?</string>
  <string name="change_photo">Сменить фото профиля</string>
  <string name="private_information">Личная информация</string>
  <string name="additional_settings">Дополнительные настройки</string>
  <string name="settings_problem">Сообщить о проблеме</string>
  <string name="settings_change_theme">Тема приложения</string>
  <string name="settings_change_language">Язык приложения</string>
  <string name="settings_notifications">Настройки уведомлений</string>
  <string name="report_problem_description">Опишите Вашу проблему:</string>
  <string name="report_problem_hint">Описание вашей проблемы</string>
  <string name="settings_notifications_title_daily">Дневное уведомление</string>
  <string name="settings_notifications_title_hourly">Часовое уведомление</string>
  <string name="settings_notifications_title_night">Ночной режим</string>
  <string name="settings_notifications_daily">За %1$d д. до начала услуги</string>
  <string name="settings_notifications_hourly">За %1$d ч. %2$d мин. до начала услуги</string>
  <string name="settings_notifications_minutely">За %1$d мин. до начала услуги</string>
  <string name="settings_notifications_night">Отключать звук с %1$s до %2$s</string>
  <string name="settings_notifications_change">Изменить</string>
  <string name="settings_notifications_change_start">Изменить начало</string>
  <string name="settings_notifications_change_end">Изменить конец</string>
  <string name="notification_title">Напоминание</string>
  <string name="notification_text">Услуга \"%1$s\" %2$s в %3$s</string>
  <string name="notification_text_today">сегодня</string>
  <string name="report_problem_button">Отправить</string>
  <string name="menu_catalog">Каталог</string>
  <string name="choose_staff">Выбор продукции</string>
  <string name="choose_category">Выбрать категорию</string>
  <string name="choose_category_dialog">Выберите категорию</string>
  <string name="sent_message">Сообщение отправлено</string>
  <string name="settings_terms_and_policy">Условия и политика</string>
  <string name="settings_terms_of_service">Условия использования</string>
  <string name="settings_privacy_policy">Политика конфиденциальности</string>
  <string name="dialog_title_select_theme">Выберите тему</string>
  <string name="error_connection">Ошибка соеденения</string>
  <string name="сheck_internet_connection">Проверте подключение к интернету</string>
  <string name="wrong">Что-то пошло не так!</string>
  <string-array name="dialog_language" translatable="false">
    <item>Русский</item>
    <item>Українська</item>
  </string-array>
  <string name="pink">Розовая</string>
  <string name="blue">Синяя</string>
  <string name="green">Зеленая</string>
  <string name="yellow">Желтая</string>
  <string name="gray">Серая</string>
  <string name="purple">Фиолетовая</string>
  <string name="red">Красная</string>
  <string name="dialog_auth_cancel">Отмена</string>
</resources>