<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="250dp"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingStart="8dp"
    >

  <TextView
      android:id="@+id/textViewTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:text="@string/dialog_title_select_theme"
      android:textColor="@color/colorGray"
      android:textSize="20sp"
      />
  <android.support.v7.widget.AppCompatRadioButton
      android:id="@+id/radioButtonPink"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/pink"
      android:textColor="@color/colorPrimary"
      android:textSize="16sp"
      app:buttonTint="@color/colorPrimary"
      />
  <android.support.v7.widget.AppCompatRadioButton
      android:id="@+id/radioButtonBlue"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/blue"
      android:textColor="@color/colorPrimaryBlue"
      android:textSize="16sp"
      app:buttonTint="@color/colorPrimaryBlue"
      />
  <android.support.v7.widget.AppCompatRadioButton
      android:id="@+id/radioButtonGreen"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/green"
      android:textColor="@color/colorPrimaryGreen"
      android:textSize="16sp"
      app:buttonTint="@color/colorPrimaryGreen"
      />
  <android.support.v7.widget.AppCompatRadioButton
      android:id="@+id/radioButtonYellow"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/yellow"
      android:textColor="@color/colorPrimaryYellow"
      android:textSize="16sp"
      app:buttonTint="@color/colorPrimaryYellow"
      />
  <android.support.v7.widget.AppCompatRadioButton
      android:id="@+id/radioButtonGray"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/gray"
      android:textColor="@color/colorPrimaryGray"
      android:textSize="16sp"
      app:buttonTint="@color/colorPrimaryGray"
      />
  <android.support.v7.widget.AppCompatRadioButton
      android:id="@+id/radioButtonPurple"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/purple"
      android:textColor="@color/colorPrimaryPurple"
      android:textSize="16sp"
      app:buttonTint="@color/colorPrimaryPurple"
      />
  <android.support.v7.widget.AppCompatRadioButton
      android:id="@+id/radioButtonRed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/red"
      android:textColor="@color/colorPrimaryRed"
      android:textSize="16sp"
      app:buttonTint="@color/colorPrimaryRed"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:paddingBottom="8dp"
      android:layout_height="wrap_content"
      >
    <TextView
        android:id="@+id/textViewOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="?attr/selectableItemBackground"
        android:padding="3dp"
        android:textSize="16sp"
        android:text="@string/dialog_action_ok"
        android:textColor="@color/colorGray"
        />
    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="end"
        android:textSize="16sp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/textViewOk"
        android:layout_toStartOf="@+id/textViewOk"
        android:background="?attr/selectableItemBackground"
        android:padding="3dp"
        android:text="@string/dialog_auth_cancel"
        android:textColor="@color/colorGray"
        />
  </RelativeLayout>
</LinearLayout>