<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    >
  <TextView
      android:id="@+id/tvTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/your_bonus"
      android:textColor="@color/colorLightGray"
      android:textSize="20sp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginStart="8dp"
      />
  <android.support.constraint.ConstraintLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@color/colorLLightGray"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvTitle"
      >

    <TextView
        android:id="@+id/tvHistoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/history_title"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvHistoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/history_description"
        android:textColor="@color/colorLightGray"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/tvBonusCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonus_measure"
        android:textColor="?colorAccent"
        android:textSize="16sp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvHistoryTitle"
        />
  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>