<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    >


  <android.support.v4.widget.NestedScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/nsv"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="100dp"
      android:layout_marginTop="0dp"
      android:fillViewport="true"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      app:layout_constraintBottom_toTopOf="@+id/cl_bottom"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <TextView
          android:id="@+id/tv_salon_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:text="@string/contacts_salon_name"
          android:textColor="@color/colorTitleBase"
          android:textSize="24sp"
          app:layout_constraintHorizontal_bias="0.071"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />
      <ImageView
          android:id="@+id/iv_phone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="24dp"
          android:layout_marginStart="24dp"
          android:layout_marginTop="16dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_salon_name"
          app:srcCompat="@drawable/ic_phone_24dp"
          />
      <TextView
          android:id="@+id/tv_phone_text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginStart="8dp"
          android:text="@string/contacts_phone_text"
          android:textColor="@color/colorTitlePhone"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toRightOf="@+id/iv_phone"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="@+id/iv_phone"
          />
      <TextView
          android:id="@+id/tv_phone1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:autoLink="phone"
          android:text="@string/contacts_phone1"
          android:textColor="@color/colorPhone"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_phone_text"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_phone_text"
          />
      <TextView
          android:id="@+id/tv_phone2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:autoLink="phone"
          android:text="@string/contacts_phone2"
          android:textColor="@color/colorPhone"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_phone_text"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_phone1"
          />
      <TextView
          android:id="@+id/tv_phone3"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:autoLink="phone"
          android:text="@string/contacts_phone3"
          android:textColor="@color/colorPhone"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_phone_text"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_phone2"
          />
      <ImageView
          android:id="@+id/iv_address"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          app:layout_constraintLeft_toLeftOf="@+id/iv_phone"
          app:layout_constraintTop_toBottomOf="@+id/tv_phone3"
          app:srcCompat="@drawable/ic_map_24dp"
          />
      <TextView
          android:id="@+id/tv_address"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/contacts_address"
          android:textColor="@color/colorTitleAddress"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_phone3"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="@+id/iv_address"
          />
      <TextView
          android:id="@+id/tv_map"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:text="@string/contacts_map"
          android:textColor="@color/colorAddress"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_address"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_address"
          />
      <ImageView
          android:id="@+id/iv_feedback"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          app:layout_constraintLeft_toLeftOf="@+id/iv_address"
          app:layout_constraintTop_toBottomOf="@+id/tv_map"
          app:srcCompat="@drawable/ic_email_24dp"
          />
      <TextView
          android:id="@+id/tv_feedback"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/contacts_feedback"
          android:textColor="@color/colorTitleMail"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_map"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="@+id/iv_feedback"
          />
      <TextView
          android:id="@+id/tv_email"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:text="@string/contacts_email"
          android:autoLink="email"
          android:textColor="@color/colorMail"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_feedback"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_feedback"
          />
      <ImageView
          android:id="@+id/iv_schedule"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="14dp"
          app:layout_constraintLeft_toLeftOf="@+id/iv_feedback"
          app:layout_constraintTop_toBottomOf="@+id/tv_email"
          app:srcCompat="@drawable/ic_work_time_24dp"
          />
      <TextView
          android:id="@+id/tv_schedule"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/contacts_schedule"
          android:textColor="@color/colorTitleTime"
          android:textSize="16sp"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="@+id/tv_email"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="@+id/iv_schedule"
          />

    </android.support.constraint.ConstraintLayout>
  </android.support.v4.widget.NestedScrollView>


  <android.support.constraint.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/cl_bottom"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_gravity="bottom|end"
      android:orientation="vertical"
      >
    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorLLLightGray"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/contacts_website"
        android:textColor="@color/colorTitleAbout"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/contacts_about"
        android:textColor="@color/colorTitleWeb"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_website"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
  </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>